Minor update to bit tables

--- a/qformat.html
+++ b/qformat.html
@@ -14,7 +14,7 @@
         <meta property="og:type" content="website" />
         <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
         <link rel="stylesheet" href="https://chummersone.github.io/assets/css/style.css?v=f6040d589f1187e6eaa1ec97f2b3af33299fb0ad">
-        <link rel="stylesheet" href="qformat.css?v=12">
+        <link rel="stylesheet" href="qformat.css?v=13">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"
                 integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
                 crossorigin="anonymous">
@@ -565,7 +565,7 @@
                     </p>
 
                     <table class="responsive">
-                        <caption data-tablenum="1">Fixed-point binary representation.</caption>
+                        <caption data-tablenum="1">Fixed-point binary representation and bit values.</caption>
                         <thead>
                             <tr>
                                 <th>Format</th>
@@ -575,41 +575,41 @@
                         <tbody>
                             <tr>
                                 <td data-label="Format">Integer</td>
-                                <td data-label="Bit 15">&minus;2<sup>15</sup></td>
-                                <td data-label="Bit 14">2<sup>14</sup></td>
-                                <td data-label="Bit 13">2<sup>13</sup></td>
-                                <td data-label="Bit 12">2<sup>12</sup></td>
-                                <td data-label="Bit 11">2<sup>11</sup></td>
-                                <td data-label="Bit 10">2<sup>10</sup></td>
-                                <td data-label="Bit 9">2<sup>9</sup></td>
-                                <td data-label="Bit 8">2<sup>8</sup></td>
-                                <td data-label="Bit 7">2<sup>7</sup></td>
-                                <td data-label="Bit 6">2<sup>6</sup></td>
-                                <td data-label="Bit 5">2<sup>5</sup></td>
-                                <td data-label="Bit 4">2<sup>4</sup></td>
-                                <td data-label="Bit 3">2<sup>3</sup></td>
-                                <td data-label="Bit 2">2<sup>2</sup></td>
-                                <td data-label="Bit 1">2<sup>1</sup></td>
-                                <td data-label="Bit 0">2<sup>0</sup></td>
+                                <td data-label="Bit 15 value">&minus;2<sup>15</sup></td>
+                                <td data-label="Bit 14 value">2<sup>14</sup></td>
+                                <td data-label="Bit 13 value">2<sup>13</sup></td>
+                                <td data-label="Bit 12 value">2<sup>12</sup></td>
+                                <td data-label="Bit 11 value">2<sup>11</sup></td>
+                                <td data-label="Bit 10 value">2<sup>10</sup></td>
+                                <td data-label="Bit 9 value">2<sup>9</sup></td>
+                                <td data-label="Bit 8 value">2<sup>8</sup></td>
+                                <td data-label="Bit 7 value">2<sup>7</sup></td>
+                                <td data-label="Bit 6 value">2<sup>6</sup></td>
+                                <td data-label="Bit 5 value">2<sup>5</sup></td>
+                                <td data-label="Bit 4 value">2<sup>4</sup></td>
+                                <td data-label="Bit 3 value">2<sup>3</sup></td>
+                                <td data-label="Bit 2 value">2<sup>2</sup></td>
+                                <td data-label="Bit 1 value">2<sup>1</sup></td>
+                                <td data-label="Bit 0 value">2<sup>0</sup></td>
                             </tr>
                             <tr>
                                 <td data-label="Format">12 fractional bits</td>
-                                <td data-label="Bit 15">&minus;2<sup>3</sup></td>
-                                <td data-label="Bit 14">2<sup>2</sup></td>
-                                <td data-label="Bit 13">2<sup>1</sup></td>
-                                <td data-label="Bit 12">2<sup>0</sup></td>
-                                <td data-label="Bit 11">2<sup>&minus;1</sup></td>
-                                <td data-label="Bit 10">2<sup>&minus;2</sup></td>
-                                <td data-label="Bit 9">2<sup>&minus;3</sup></td>
-                                <td data-label="Bit 8">2<sup>&minus;4</sup></td>
-                                <td data-label="Bit 7">2<sup>&minus;5</sup></td>
-                                <td data-label="Bit 6">2<sup>&minus;6</sup></td>
-                                <td data-label="Bit 5">2<sup>&minus;7</sup></td>
-                                <td data-label="Bit 4">2<sup>&minus;8</sup></td>
-                                <td data-label="Bit 3">2<sup>&minus;9</sup></td>
-                                <td data-label="Bit 2">2<sup>&minus;10</sup></td>
-                                <td data-label="Bit 1">2<sup>&minus;11</sup></td>
-                                <td data-label="Bit 0">2<sup>&minus;12</sup></td>
+                                <td data-label="Bit 15 value">&minus;2<sup>3</sup></td>
+                                <td data-label="Bit 14 value">2<sup>2</sup></td>
+                                <td data-label="Bit 13 value">2<sup>1</sup></td>
+                                <td data-label="Bit 12 value">2<sup>0</sup></td>
+                                <td data-label="Bit 11 value">2<sup>&minus;1</sup></td>
+                                <td data-label="Bit 10 value">2<sup>&minus;2</sup></td>
+                                <td data-label="Bit 9 value">2<sup>&minus;3</sup></td>
+                                <td data-label="Bit 8 value">2<sup>&minus;4</sup></td>
+                                <td data-label="Bit 7 value">2<sup>&minus;5</sup></td>
+                                <td data-label="Bit 6 value">2<sup>&minus;6</sup></td>
+                                <td data-label="Bit 5 value">2<sup>&minus;7</sup></td>
+                                <td data-label="Bit 4 value">2<sup>&minus;8</sup></td>
+                                <td data-label="Bit 3 value">2<sup>&minus;9</sup></td>
+                                <td data-label="Bit 2 value">2<sup>&minus;10</sup></td>
+                                <td data-label="Bit 1 value">2<sup>&minus;11</sup></td>
+                                <td data-label="Bit 0 value">2<sup>&minus;12</sup></td>
                             </tr>
                         </tbody>
                     </table>
