--- a/qformat.html
+++ b/qformat.html
@@ -559,7 +559,7 @@
                         So what is <em>fixed-point</em>? As the name implies, it describes a number where the decimal point is
                         in a fixed position. Specifically, in this context, this refers to the position of the decimal point in the
                         binary representation. For example, a fixed-point number that has 16 bits might use 4 bits for the integer
-                        part, and 12 bits for the fracitonal part. In <a href="https://en.wikipedia.org/wiki/Two%27s_complement">two's
+                        part, and 12 bits for the fractional part. In <a href="https://en.wikipedia.org/wiki/Two%27s_complement">two's
                         complement</a>, this implies that the integer is in the range from [&minus;8, 7], and the fractional part
                         is in the range [0, 1).
                     </p>
