--- a/qformat.html
+++ b/qformat.html
@@ -560,7 +560,7 @@
                         in a fixed position. Specifically, in this context, this refers to the position of the decimal point in the
                         binary representation. For example, a fixed-point number that has 16 bits might use 4 bits for the integer
                         part, and 12 bits for the fractional part. In <a href="https://en.wikipedia.org/wiki/Two%27s_complement">two's
-                        complement</a>, this implies that the integer is in the range from [&minus;8, 7], and the fractional part
+                        complement</a>, this implies that the integer is in the range [&minus;8, 7], and the fractional part
                         is in the range [0, 1).
                     </p>
 
@@ -712,7 +712,7 @@
                         the operands have the same number of fractional bits, then the operation is unaffected: the
                         result will have the same number of fractional bits, and can be converted accordingly. Specifically,
                         if two fractional operands <i>x</i><sub>1</sub> and <i>x</i><sub>2</sub> have <i>N</i> fractional
-                        bits, then the result of adding <i>x</i><sub>1</sub> and <i>x</i><sub>2</sub> will be:
+                        bits, then the result of adding them will be:
                     </p>
 
                     <p class="equation">
@@ -731,10 +731,9 @@
 
                     <p>
                         Multiplication is slightly more complex. The operands are not required to have the same number of
-                        fractional bits, but the number of fractional bits in the result will depend on the
-                        operands. Specifically, if <i>x</i><sub>1</sub> has <i>M</i> fractional bits, and
-                        <i>x</i><sub>2</sub> has <i>N</i> fractional bits, then the result of multiplying
-                        <i>x</i><sub>1</sub> and <i>x</i><sub>2</sub> will be:
+                        fractional bits, but the number of fractional bits in the result will depend on the operands.
+                        Specifically, if <i>x</i><sub>1</sub> has <i>M</i> fractional bits, and <i>x</i><sub>2</sub> has
+                        <i>N</i> fractional bits, then the result of multiplying them will be:
                     </p>
 
                     <p class="equation">
