Minor updates to tables

--- a/qformat.html
+++ b/qformat.html
@@ -14,7 +14,7 @@
         <meta property="og:type" content="website" />
         <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
         <link rel="stylesheet" href="https://chummersone.github.io/assets/css/style.css?v=f6040d589f1187e6eaa1ec97f2b3af33299fb0ad">
-        <link rel="stylesheet" href="qformat.css?v=15">
+        <link rel="stylesheet" href="qformat.css?v=16">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"
                 integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
                 crossorigin="anonymous">
@@ -637,8 +637,8 @@
                         <thead>
                             <tr>
                                 <th>Number of bits</th>
-                                <th>Number of integer bits</th>
-                                <th>Number of fractional bits</th>
+                                <th>Integer bits</th>
+                                <th>Fractional bits</th>
                                 <th>Minimum value</th>
                                 <th>Maximum value</th>
                                 <th>Precision</th>
@@ -647,32 +647,32 @@
                         <tbody>
                             <tr>
                                 <td data-label="Number of bits">16</td>
-                                <td data-label="Number of integer bits">16</td>
-                                <td data-label="Number of fractional bits">0</td>
+                                <td data-label="Integer bits">16</td>
+                                <td data-label="Fractional bits">0</td>
                                 <td data-label="Minimum value">&minus;32768</td>
                                 <td data-label="Maximum value">32767</td>
                                 <td data-label="Precision">1</td>
                             </tr>
                             <tr>
                                 <td data-label="Number of bits">16</td>
-                                <td data-label="Number of integer bits">4</td>
-                                <td data-label="Number of fractional bits">12</td>
+                                <td data-label="Integer bits">4</td>
+                                <td data-label="Fractional bits">12</td>
                                 <td data-label="Minimum value">&minus;8.0</td>
                                 <td data-label="Maximum value">7.999755859375</td>
                                 <td data-label="Precision">0.000244140625</td>
                             </tr>
                             <tr>
                                 <td data-label="Number of bits">16</td>
-                                <td data-label="Number of integer bits">1</td>
-                                <td data-label="Number of fractional bits">15</td>
+                                <td data-label="Integer bits">1</td>
+                                <td data-label="Fractional bits">15</td>
                                 <td data-label="Minimum value">&minus;1.0</td>
                                 <td data-label="Maximum value">0.999969482421875</td>
                                 <td data-label="Precision">0.000030517578125</td>
                             </tr>
                             <tr>
                                 <td data-label="Number of bits">16</td>
-                                <td data-label="Number of integer bits">12</td>
-                                <td data-label="Number of fractional bits">14</td>
+                                <td data-label="Integer bits">12</td>
+                                <td data-label="Fractional bits">14</td>
                                 <td data-label="Minimum value">&minus;2048.0</td>
                                 <td data-label="Maximum value">2047.9375</td>
                                 <td data-label="Precision">0.0625</td>
