--- a/qformat.html
+++ b/qformat.html
@@ -621,7 +621,7 @@
                         (<code>0b1000000000000000</code>) to 32767 (<code>0b0111111111111111</code>). If the decimal point is moved
                         to the left, then the new range will be reduced. Note, though, that the position of the decimal point is not
                         encoded in the data. So, for example, <code>0b0001000000000000</code> conveys 4096 as an integer, or 1 if
-                        there are 12 fractional bits. Note that the decimal position will have to be conveyed in metadata, comments,
+                        there are 12 fractional bits. Note also that the decimal position will have to be conveyed in metadata, comments,
                         or documentation. This description of the number of integer and fractional bits is called the Q-format.
                     </p>
 
