--- a/qformat.html
+++ b/qformat.html
@@ -641,7 +641,7 @@
                                 <th>Fractional bits</th>
                                 <th>Minimum value</th>
                                 <th>Maximum value</th>
-                                <th>Precision</th>
+                                <th>Resolution</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -651,7 +651,7 @@
                                 <td data-label="Fractional bits">0</td>
                                 <td data-label="Minimum value">&minus;32768</td>
                                 <td data-label="Maximum value">32767</td>
-                                <td data-label="Precision">1</td>
+                                <td data-label="Resolution">1</td>
                             </tr>
                             <tr>
                                 <td data-label="Number of bits">16</td>
@@ -659,7 +659,7 @@
                                 <td data-label="Fractional bits">12</td>
                                 <td data-label="Minimum value">&minus;8.0</td>
                                 <td data-label="Maximum value">7.999755859375</td>
-                                <td data-label="Precision">0.000244140625</td>
+                                <td data-label="Resolution">0.000244140625</td>
                             </tr>
                             <tr>
                                 <td data-label="Number of bits">16</td>
@@ -667,7 +667,7 @@
                                 <td data-label="Fractional bits">15</td>
                                 <td data-label="Minimum value">&minus;1.0</td>
                                 <td data-label="Maximum value">0.999969482421875</td>
-                                <td data-label="Precision">0.000030517578125</td>
+                                <td data-label="Resolution">0.000030517578125</td>
                             </tr>
                             <tr>
                                 <td data-label="Number of bits">16</td>
@@ -675,7 +675,7 @@
                                 <td data-label="Fractional bits">14</td>
                                 <td data-label="Minimum value">&minus;2048.0</td>
                                 <td data-label="Maximum value">2047.9375</td>
-                                <td data-label="Precision">0.0625</td>
+                                <td data-label="Resolution">0.0625</td>
                             </tr>
                         </tbody>
                     </table>
