--- a/qformat.html
+++ b/qformat.html
@@ -693,7 +693,7 @@
 
                     <p>
                         Note that <i>y</i> is necessarily rounded in order to store the value as an integer. This
-                        rounding causes an irreversible loss of accuracy.
+                        rounding causes an irreversible loss of precision.
                     </p>
 
                     <p>
