Automate equation counter

--- a/qformat.html
+++ b/qformat.html
@@ -14,7 +14,7 @@
         <meta property="og:type" content="website" />
         <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
         <link rel="stylesheet" href="https://chummersone.github.io/assets/css/style.css?v=f6040d589f1187e6eaa1ec97f2b3af33299fb0ad">
-        <link rel="stylesheet" href="qformat.css?v=16">
+        <link rel="stylesheet" href="qformat.css?v=17">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"
                 integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
                 crossorigin="anonymous">
@@ -688,7 +688,7 @@
                     </p>
 
                     <p class="equation">
-                        <span data-eqnum="1" class="eq"><i>y</i> = <i>x</i> &times; 2<sup><i>N</i></sup></span>
+                        <span class="eq"><i>y</i> = <i>x</i> &times; 2<sup><i>N</i></sup></span>
                     </p>
 
                     <p>
@@ -701,7 +701,7 @@
                     </p>
 
                     <p class="equation">
-                        <span data-eqnum="2" class="eq"><i>x</i> = <i>y</i> &divide; 2<sup><i>N</i></sup></span>
+                        <span class="eq"><i>x</i> = <i>y</i> &divide; 2<sup><i>N</i></sup></span>
                     </p>
 
 
@@ -716,7 +716,7 @@
                     </p>
 
                     <p class="equation">
-                        <span data-eqnum="3" class="eq"><!--
+                        <span class="eq"><!--
                         -->(<i>x</i><sub>1</sub> &times; 2<sup><i>N</i></sup>) + <!--
                         -->(<i>x</i><sub>2</sub> &times; 2<sup><i>N</i></sup>) = <wbr><!--
                         -->(<i>x</i><sub>1</sub> + <i>x</i><sub>2</sub>) &times; <!--
@@ -737,7 +737,7 @@
                     </p>
 
                     <p class="equation">
-                        <span data-eqnum="4" class="eq"><!--
+                        <span class="eq"><!--
                         -->(<i>x</i><sub>1</sub> &times; 2<sup><i>M</i></sup>) &times; <!--
                         -->(<i>x</i><sub>2</sub> &times; 2<sup><i>N</i></sup>) = <wbr><!--
                         --><i>x</i><sub>1</sub> &times; <i>x</i><sub>2</sub> &times; <!--
