Add resolution to converter

--- a/qformat.html
+++ b/qformat.html
@@ -20,9 +20,9 @@
                 crossorigin="anonymous">
         </script>
         <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-        <script src="qformat.js?v=5"></script>
-        <script src="qformat.converter.js?v=5"></script>
-        <script src="qformat.calculator.js?v=5"></script>
+        <script src="qformat.js?v=6"></script>
+        <script src="qformat.converter.js?v=6"></script>
+        <script src="qformat.calculator.js?v=6"></script>
         <script>
             $(function() {
                 var dataIndex = 'tab';
@@ -131,6 +131,15 @@
                                 </div><!--
                                  --><div class="col w75">
                                     <input id="minfloat" type="text" value="0" disabled>
+                                </div>
+                            </div>
+
+                            <div class="control-grp">
+                                <div class="col w25">
+                                    <label for="resolution">Resolution</label>
+                                </div><!--
+                                 --><div class="col w75">
+                                    <input id="resolution" type="text" value="0" disabled>
                                 </div>
                             </div>
 
