Add a permalink to recall the converter settings

--- a/qformat.html
+++ b/qformat.html
@@ -20,9 +20,9 @@
                 crossorigin="anonymous">
         </script>
         <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-        <script src="qformat.js?v=6"></script>
-        <script src="qformat.converter.js?v=6"></script>
-        <script src="qformat.calculator.js?v=6"></script>
+        <script src="qformat.js?v=7"></script>
+        <script src="qformat.converter.js?v=7"></script>
+        <script src="qformat.calculator.js?v=7"></script>
         <script>
             $(function() {
                 var dataIndex = 'tab';
@@ -68,7 +68,7 @@
                         <fieldset>
                             <legend>Q-Format Settings</legend>
 
-                            <p>Choose your conversion options.</p>
+                            <p>Choose your conversion options. <a id="permalink" href="">Link to these settings.</a></p>
 
                             <div class="control-grp">
                                 <div class="col w25">
