--- a/qformat.html
+++ b/qformat.html
@@ -68,7 +68,7 @@
                         <fieldset>
                             <legend>Q-Format Settings</legend>
 
-                            <p>Choose your conversion options. <a id="permalink" href="">Link to these settings.</a></p>
+                            <p>Choose your conversion options. <a id="permalink" href="">Link to these options.</a></p>
 
                             <div class="control-grp">
                                 <div class="col w25">
